--- a/spec/fixtures/wiki_comments.yml
+++ b/spec/fixtures/wiki_comments.yml
@@ -1,4 +1,18 @@
-# Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
+# Read about fixtures at http://ar.rubyonrails.org/# == Schema Information
+# Schema version: 20091027220707
+#
+# Table name: wiki_comments
+#
+#  id                 :integer       not null, primary key
+#  wiki_page_id       :integer       
+#  user_id            :integer       
+#  body               :text          
+#  looking_at_version :integer       
+#  created_at         :datetime      
+#  updated_at         :datetime      
+# End Schema
+
+classes/Fixtures.html
 
 # one:
 #   column: value
