--- a/spec/fixtures/wiki_tags.yml
+++ b/spec/fixtures/wiki_tags.yml
@@ -1,4 +1,13 @@
-# Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
+# Read about fixtures at http://ar.rubyonrails.org/# == Schema Information
+# Schema version: 20091027220707
+#
+# Table name: wiki_tags
+#
+#  id   :integer       not null, primary key
+#  name :string(255)   
+# End Schema
+
+classes/Fixtures.html
 
 # one:
 #   column: value
