--- a/spec/fixtures/categories.yml
+++ b/spec/fixtures/categories.yml
@@ -9,6 +9,17 @@
 #  updated_at :datetime      
 # End Schema
 
+# == Schema Information
+# Schema version: 20091027220707
+#
+# Table name: categories
+#
+#  id         :integer       not null, primary key
+#  name       :string(255)   
+#  created_at :datetime      
+#  updated_at :datetime      
+# End Schema
+
 classes/Fixtures.html
 
 one:
