--- a/spec/fixtures/wiki_pages.yml
+++ b/spec/fixtures/wiki_pages.yml
@@ -13,6 +13,21 @@
 #  version           :integer       
 # End Schema
 
+# == Schema Information
+# Schema version: 20091027220707
+#
+# Table name: wiki_pages
+#
+#  id                :integer       not null, primary key
+#  title             :string(255)   
+#  url_title         :string(255)   
+#  modifying_user_id :integer       
+#  body              :text          
+#  created_at        :datetime      
+#  updated_at        :datetime      
+#  version           :integer       
+# End Schema
+
 classes/Fixtures.html
 
 # one:
