--- a/spec/fixtures/site_settings.yml
+++ b/spec/fixtures/site_settings.yml
@@ -13,6 +13,21 @@
 #  updated_at           :datetime      
 # End Schema
 
+# == Schema Information
+# Schema version: 20091120223316
+#
+# Table name: site_settings
+#
+#  id                   :integer       not null, primary key
+#  setting_name         :string(255)   
+#  setting_string_value :string(255)   
+#  setting_text_value   :text          
+#  setting_number_value :integer       
+#  yamled               :boolean       
+#  created_at           :datetime      
+#  updated_at           :datetime      
+# End Schema
+
 classes/Fixtures.html
 
 one:
