--- a/spec/fixtures/user_groups.yml
+++ b/spec/fixtures/user_groups.yml
@@ -1,13 +1,12 @@
-# Read about fixtures at http://ar.rubyonrails.org/# == Schema Information
+# == Schema Information
 # Schema version: 20091120223316
 #
 # Table name: user_groups
 #
-#  id   :integer       not null, primary key
-#  name :string(255)   
+#  id      :integer       not null, primary key
+#  name    :string(255)   
+#  special :string(255)   
 # End Schema
-
-classes/Fixtures.html
 
 one:
   name: MyString
