make message appear if someone is editing a wiki page

--- a/spec/fixtures/wiki_pages.yml
+++ b/spec/fixtures/wiki_pages.yml
@@ -14,18 +14,20 @@
 # End Schema
 
 # == Schema Information
-# Schema version: 20100107160119
+# Schema version: 20100107232148
 #
 # Table name: wiki_pages
 #
-#  id                :integer       not null, primary key
-#  title             :string(255)   
-#  url_title         :string(255)   
-#  modifying_user_id :integer       
-#  body              :text          
-#  created_at        :datetime      
-#  updated_at        :datetime      
-#  version           :integer       
+#  id                 :integer       not null, primary key
+#  title              :string(255)   
+#  url_title          :string(255)   
+#  modifying_user_id  :integer       
+#  body               :text          
+#  created_at         :datetime      
+#  updated_at         :datetime      
+#  version            :integer       
+#  started_editing_at :datetime      
+#  editing_user_id    :integer       
 # End Schema
 
 classes/Fixtures.html
