--- a/spec/fixtures/wiki_pages.yml
+++ b/spec/fixtures/wiki_pages.yml
@@ -14,7 +14,7 @@
 # End Schema
 
 # == Schema Information
-# Schema version: 20100107232148
+# Schema version: 20100125191432
 #
 # Table name: wiki_pages
 #
@@ -28,6 +28,7 @@
 #  version            :integer       
 #  started_editing_at :datetime      
 #  editing_user_id    :integer       
+#  wiki_id            :integer       
 # End Schema
 
 classes/Fixtures.html
