more updates to the forums and message posts
fix to make posting to threads work
allow uploads on message posts (storing them in a user-id directory)

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ nbproject/
 spec/spec.opts.netbeans
 public/content_page_assets/
 public/wiki_page_assets/
+public/user_assets/
 public/themes
 public/images/favorite.png
 coverage/
