--- a/spec/fixtures/wikis.yml
+++ b/spec/fixtures/wikis.yml
@@ -1,4 +1,16 @@
-# Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
+# Read about fixtures at http://ar.rubyonrails.org/# == Schema Information
+# Schema version: 20100216214034
+#
+# Table name: wikis
+#
+#  id          :integer       not null, primary key
+#  name        :string(255)   
+#  description :text          
+#  created_at  :datetime      
+#  updated_at  :datetime      
+# End Schema
+
+classes/Fixtures.html
 
 # one:
 #   column: value
