--- a/spec/fixtures/user_groups.yml
+++ b/spec/fixtures/user_groups.yml
@@ -6,3 +6,13 @@ wiki_editor:
   name: Wiki Editor Access
   special: ---
   - 1
+
+# == Schema Information
+#
+# Table name: user_groups
+#
+#  id      :integer         not null, primary key
+#  name    :string(255)
+#  special :text(255)
+#
+
