minor updates/cleanup
red > green features

setup rcov + cucumber/rspec rake tasks

--- a/spec/fixtures/categories.yml
+++ b/spec/fixtures/categories.yml
@@ -1,4 +1,6 @@
-
+category_some:
+  id: <%= Fixtures.identify :category_some %>
+  name: Some Wiki-provided Category
 # == Schema Information
 #
 # Table name: categories
