--- a/spec/fixtures/blog_posts.yml
+++ b/spec/fixtures/blog_posts.yml
@@ -4,3 +4,20 @@ published_post:
   body: "Unquestionably the biggest challenge facing any organization today is effectively locating, managing and analysing the constant stream of data."
   author_id: <%= Fixtures.identify :john %>
   published: true
+# == Schema Information
+#
+# Table name: blog_posts
+#
+#  id                 :integer         not null, primary key
+#  author_id          :integer
+#  category_id        :integer
+#  editing_user_id    :integer
+#  modifying_user_id  :integer
+#  title              :string(255)
+#  body               :text
+#  published          :boolean         default(FALSE)
+#  started_editing_at :datetime
+#  created_at         :datetime
+#  updated_at         :datetime
+#
+
