--- a/spec/fixtures/content_pages.yml
+++ b/spec/fixtures/content_pages.yml
@@ -1,4 +1,5 @@
 
+
 # == Schema Information
 #
 # Table name: content_pages
@@ -13,5 +14,6 @@
 #  started_editing_at :datetime
 #  editing_user_id    :integer
 #  publish_on         :date
+#  layout             :string(255)
 #
 
