minor tweaks for layout, etc

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ public/wiki_page_assets/
 public/user_assets/
 public/themes
 public/images/favorite.png
+public/images/rrcp_logo.png
 coverage/
 .rvmrc
 public/files
